# DRWA

./: .gitignore  README.md  main.py  pyproject.toml  train.py
configs/: cpu_tiny.yaml  dense_3b.yaml  dense_colab.yaml  dense_large.yaml  dense_medium.yaml  dense_small.yaml
scripts/: colab_setup.py  expand_pool.py  profile.py  train_cpu.py  verify_install.py
src/drwa/: __init__.py  checkpoint.py  config.py  data.py  model.py  parts.py  run_config.py  sharding.py
