[project]
name = "drwa"
version = "0.1.0"
description = "DRWA (Disk-Resident Reasoning Weight-Assembly) Training Framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax[cpu,tpu]>=0.4.30",
    "flax>=0.8.0",
    "optax>=0.1.9",
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "tokenizers>=0.19.0",
    "pyyaml>=6.0",
    "numpy>=1.26.0",
    "wandb>=0.17.0",
    "tqdm>=4.66.0",
    "scikit-learn>=1.4.0",  # For KMeans in pool expansion
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drwa"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
